# paul-learn-agent

./: .env.example  .gitignore  LICENSE  README.md  main.py  pyproject.toml
agent/: agent.py  agent_type.py  config.py  context_compressor.py  prompt_builder.py
agent/llm/: __init__.py  anthropic_provider.py  deepseek_provider.py  openai_provider.py  provider.py
agent/tools/: delegate_tool.py  file_tool.py  skills_tool.py  terminal_tool.py  todo_tool.py  tool_manager.py
docs/: tools.md
resources/prompt/: Research.txt
tests/: test_file_tool.py  test_main.py  test_skills_tool.py  test_terminal_tool.py  test_tool_registry.py
tests/skills/test-skill/: SKILL.md
tests/skills/test-skill/references/: api.md
tests/skills/test-skill/scripts/: helper.py
tests/skills/test-skill/templates/: config.yaml
